<resources>
    <string name="app_name">CrowdWiseBali</string>

    <!--Menu Title-->
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>

    <!--Welcome-->
    <string name="titleWelcome">"Welcome to <font color="#3498DB">CrowdWise Bali</font>, Discover New Stories!"</string>
    <string name="signInWithGoogle">Sign In with Google</string>

    <!--Setting-->
    <string name="profile_picture">Profile Picture</string>
    <string name="fab_edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sub_settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="enable_theme">Enable Theme</string>
    <string name="about">About Us</string>
    <string name="info_app">App Information</string>

    <!--    Favorite item (item_fav)-->
    <string name="dest_fav">Here`s Your Favorite Destination</string>
    <string name="dest_name">Destination Name</string>
    <string name="dest_loc">Destination Location</string>
    <string name="dest_crowd">Destination Crowd</string>
    <string name="save_favorite">Save Favorite</string>

    <string name="rating">rate</string>
    <string name="user_count">(user count)</string>

    <!--    Searching-->
    <string name="search">Search</string>
    <string name="sub_search">Search Your Dreams</string>
    <string name="text_result">Search Result</string>

    <!--    Home-->
    <string name="welcome">Welcome</string>
    <string name="welcomeToApp">Welcome to CrowdWise Bali!</string>
    <string name="titlePrediction">Try to predict the destinations !</string>
    <string name="titleListObject">Object Destination</string>
    <string name="titleRecommendation">Recommendation for you</string>
    <string name="lodging">Lodging</string>
    <string name="poi">Shopping Mall</string>
    <string name="ens">Restaurant</string>
    <string name="hello">Hello,</string>
    <string name="location">Location</string>

    <!--    Detail Object Destination-->
    <string name="image_dest">Image Destination</string>
    <string name="maps">Maps</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="date_pick">Choose Date</string>
    <string name="time_pick">Choose Time</string>
    <string name="prediction">Predict the Crowd!</string>
    <string name="result_prediction">Result Prediction</string>
    <string name="quiet">Quiet</string>
    <string name="somewhat_busy">Somewhat Busy</string>
    <string name="crowded">Crowded</string>
    <string name="very_crowded">Very Crowded</string>
    <string name="invalid">Invalid</string>

    <!--    Splash-->
    <string name="title_one_splash">Live Crowd Updates</string>
    <string name="title_two_splash">Discover Hidden Gems: Explore Bali Secret Spots</string>
    <string name="title_three_splash">Crowd Density Map: Know Before You Go</string>

    <string name="text_one_splash">Stay informed about real-time crowd levels at popular destinations across Bali. Plan your visits better with up-to-date insights, ensuring a comfortable and enjoyable experience. Avoid overcrowded spots and discover serene alternatives with ease!</string>
    <string name="text_two_splash">Uncover lesser-known destinations in Bali that offer unique experiences away from the crowds. Embrace sustainable tourism by visiting these serene and culturally rich locations. Explore a new side of Bali while supporting local communities!</string>
    <string name="text_three_splash">See real-time visualizations of crowd density across various locations in Bali. Make informed decisions to visit attractions when they’re less crowded for a more enjoyable experience. Avoid the rush and explore Bali comfortably!</string>

    <!--    Profile-->
    <string name="our_teams">Our Teams</string>
    <string name="ml_team">Machine Learning Teams</string>
    <string name="md_team">Mobile Development Teams</string>
    <string name="cc_team">Cloud Computing Teams</string>
    <string name="cc_1">I Gede Hari Kresna Wiyasa</string>
    <string name="cc_2">Ida Bagus Made Wiguna Tedja Sukmana	</string>
    <string name="ml_1">Devon Vivian Gunawan</string>
    <string name="ml_2">Gede Eka Putra Wijaya	</string>
    <string name="ml_3">Ni Made Ayu Pranasanthi Dewi</string>
    <string name="md_0">Gagas Pradipta Jatmiko</string>
    <string name="md_1">Lusia Elvira Sue Sare</string>
    <string name="logout">Log out</string>

    <string name="title_theme">Theme</string>
    <string name="title_language">Language</string>
    <string name="title_about">About</string>
    <string name="title_feature">Feature</string>
    <string name="title_one_prof">Real-Time Visitor Density</string>
    <string name="title_two_prof">Hidden Gems Recommendations</string>
    <string name="title_three_prof">Map Integration</string>

    <string name="teks_about">About Us</string>
    <string name="teks_info">Application Information</string>
    <string name="teks_theme">Change Theme</string>
    <string name="teks_language">Change Language</string>
    <string name="teks_one_prof">Displays live crowd levels at various tourist destinations across Bali</string>
    <string name="teks_two_prof">Highlights lesser-known locations to explore, encouraging sustainable tourism</string>
    <string name="teks_three_prof">Visualizes crowd density across locations</string>

    <string name="teks_app">CrowdWise Bali is an innovative mobile application aimed at alleviating overcrowding in Balis most popular tourist destinations. It offers real-time visitor density data, allowing tourists to make informed decisions and discover less crowded spots.</string>

    <!--    Button-->
    <string name="button_back">Back</string>
    <string name="button_skip">Skip</string>
    <string name="button_next">Next</string>

</resources>